--- a/trunk/mime-types/Rakefile
+++ b/trunk/mime-types/Rakefile
@@ -21,12 +21,16 @@ $LOAD_PATH.unshift('lib')
 
 require 'mime/types'
 
-DISTDIR = "mime-types-#{MIME::Types::VERSION}"
-TARDIST = "../#{DISTDIR}.tar.gz"
+$version  = MIME::Types::VERSION
+$name     = MIME::Types.to_s
+$project  = MetaProject::Project::XForge::RubyForge.new('mime-types')
+$distdir  = "mime-types-#$version"
+$tardist  = "../#$distdir.tar.gz"
 
 $release_date = nil
 $release_date = Time.parse(ENV['RELEASE_DATE']) if ENV['RELEASE_DATE']
 
+desc "Run the tests for #$name."
 task :test do |t|
   require 'test/unit/testsuite'
   require 'test/unit/ui/console/testrunner'
@@ -40,7 +44,7 @@ task :test do |t|
     load testcase
   end
 
-  suite = Test::Unit::TestSuite.new("MIME::Types")
+  suite = Test::Unit::TestSuite.new($name)
 
   ObjectSpace.each_object(Class) do |testcase|
     suite << testcase.suite if testcase < Test::Unit::TestCase
@@ -49,9 +53,17 @@ task :test do |t|
   runner.run(suite)
 end
 
+desc "Look for TODO and FIXME tags in the code"
+task :todo do
+  rx = %r{#.*(FIXME|TODO|TBD|DEPRECATED)}
+  Pathname.new(File.dirname(__FILE__)).egrep(rx) do |match|
+    puts match
+  end
+end
+
 spec = eval(File.read("mime-types.gemspec"))
-spec.version = MIME::Types::VERSION
-desc "Build the RubyGem for MIME::Types"
+spec.version = $version
+desc "Build the RubyGem for #$name."
 task :gem => [ :test ]
 Rake::GemPackageTask.new(spec) do |g|
   g.need_tar    = false
@@ -59,9 +71,9 @@ Rake::GemPackageTask.new(spec) do |g|
   g.package_dir = ".."
 end
 
-desc "Build a MIME::Types .tar.gz distribution."
-task :tar => [ TARDIST ]
-file TARDIST => [ :test ] do |t|
+desc "Build a #$name .tar.gz distribution."
+task :tar => [ $tardist ]
+file $tardist => [ :test ] do |t|
   current = File.basename(Dir.pwd)
   Dir.chdir("..") do
     begin
@@ -69,7 +81,7 @@ file TARDIST => [ :test ] do |t|
                  setup.rb pre-setup.rb)
       files = FileList[files.map { |file| File.join(current, file) }].to_a
       files.map! do |dd|
-        ddnew = dd.gsub(/^#{current}/, DISTDIR)
+        ddnew = dd.gsub(/^#{current}/, $distdir)
         mtime = $release_date || File.stat(dd).mtime
         if File.directory?(dd)
           { :name => ddnew, :mode => 0755, :dir => true, :mtime => mtime }
@@ -80,8 +92,8 @@ file TARDIST => [ :test ] do |t|
             mode = 0644
           end
           data = File.open(dd, "rb") { |ff| ff.read }
-          { :name => ddnew, :mode => mode, :data => data, :size => data.size,
-            :mtime => mtime }
+          { :name => ddnew, :mode => mode, :data => data, :size =>
+            data.size, :mtime => mtime }
         end
       end
 
@@ -105,16 +117,94 @@ file TARDIST => [ :test ] do |t|
     end
   end
 end
-task TARDIST => [ :test ]
+task $tardist => [ :test ]
 
-desc "Build the RDoc documentation for MIME::Types"
+desc "Build the RDoc documentation for #$name."
 task :docs do
   require 'rdoc/rdoc'
-  rdoc_options = %w(--title MIME::Types --main README --line-numbers)
+  rdoc_options = %W(--title #$name --main README --line-numbers)
   files = FileList[*%w(README LICENCE ChangeLog bin/**/*.rb lib/**/*.rb)]
   rdoc_options += files.to_a
   RDoc::RDoc.new.document(rdoc_options)
 end
+
+task :verify_rubyforge do
+  raise "RUBYFORGE_USER environment variable not set!" unless ENV['RUBYFORGE_USER']
+  raise "RUBYFORGE_PASSWORD environment variable not set!" unless ENV['RUBYFORGE_PASSWORD']
+end
+
+task :verify_gmail do
+  raise "GMAIL_USER environment variable not set!" unless ENV['GMAIL_USER']
+  raise "GMAIL_PASSWORD environment variable not set!" unless ENV['GMAIL_PASSWORD']
+end
+
+desc "Release files on RubyForge."
+task :release_files => [ :verify_rubyforge, :tar, :gem ] do
+  release_files = FileList[$tardist, $demotar, "../#$distdir.gem"]
+  Rake::XForge::Release.new($project) do |release|
+    release.user_name     = ENV['RUBYFORGE_USER']
+    release.password      = ENV['RUBYFORGE_PASSWORD']
+    release.files         = release_files.to_a
+    release.release_name  = "#$name #$version"
+    release.package_name  = "mime-types"
+
+    notes = []
+    File.open("README") do |file|
+      file.each do |line|
+        line.chomp!
+        line.gsub!(/^#.*$/, '') and next
+        notes << line
+      end
+    end
+    release.release_notes   = notes.join("\n")
+
+    changes = []
+    File.open("ChangeLog") do |file|
+      current = true
+
+      file.each do |line|
+        line.chomp!
+        current = false if current and line =~ /^==/
+        break if line.empty? and not current
+        changes << line
+      end
+    end
+    release.release_changes = changes.join("\n")
+  end
+end
+
+desc "Publish news on RubyForge"
+task :publish_news => [ :verify_rubyforge, :tar, :gem ] do
+  Rake::XForge::NewsPublisher.new($project) do |news|
+    news.user_name    = ENV['RUBYFORGE_USER']
+    news.password     = ENV['RUBYFORGE_PASSWORD']
+    news.subject      = "#$name #$version Released"
+    news.changes_file = nil
+
+    details = []
+    File.open("Release-Announcement") do |file|
+      file.each do |line|
+        line.chomp!
+        break if line =~ /^=/
+        details << line
+      end
+    end
+    news.details      = details.join("\n")
+  end
+end
+
+desc "Post a release announcement via GMail."
+task :email_announcement => [ :verify_gmail ] do
+  GMailer.connect(ENV["GMAIL_USER"], ENV["GMAIL_PASSWORD"]) do |gmail|
+    gmail.send  :to       => "ruby-talk@ruby-lang.org",
+                :subject  => "[ANN] #$name #$version"
+                :body     => File.read("Release-Announcement")
+  end
+end
+
+desc "Release the latest version."
+task :release => [ :verify_rubyforge, :verify_gmail, :release_files,
+  :publish_news, :email_announcement, :docs ]
 
 desc "Build everything."
 task :default => [ :tar, :gem ]
