--- a/trunk/mime-types/Rakefile
+++ b/trunk/mime-types/Rakefile
@@ -197,7 +197,7 @@ desc "Post a release announcement via GMail."
 task :email_announcement => [ :verify_gmail ] do
   GMailer.connect(ENV["GMAIL_USER"], ENV["GMAIL_PASSWORD"]) do |gmail|
     gmail.send  :to       => "ruby-talk@ruby-lang.org",
-                :subject  => "[ANN] #$name #$version"
+                :subject  => "[ANN] #$name #$version",
                 :body     => File.read("Release-Announcement")
   end
 end
