Final preparations for release.

--- a/.hoerc
+++ b/.hoerc
@@ -1,6 +1,6 @@
 --- 
 publish_on_announce: false
-exclude: !ruby/regexp /\.(?:svn|git)|(?:\.(?:swp|hoerc|DS_Store|gemspec)|~|Release-Announcement)$|(?:coverage|type-lists)\//
+exclude: !ruby/regexp /\.(?:svn|git)|(?:\.(?:swp|hoerc|DS_Store)|~|email.txt)$|(?:coverage|type-lists)\//
 signing_key_file: ~/.gem/gem-private_key.pem
 signing_cert_file: ~/.gem/gem-public_cert.pem
 blogs: 
