--- a/.hoerc
+++ b/.hoerc
@@ -1,10 +1,2 @@
---- 
-publish_on_announce: false
-exclude: !ruby/regexp /\.(?:svn|git)|(?:\.(?:swp|hoerc|DS_Store)|~|email.txt)$|(?:coverage|type-lists)\//
-blogs: 
-- user: user
-  url: url
-  extra_headers: 
-    mt_convert_breaks: markdown
-  blog_id: blog_id
-  password: password
+---
+exclude: !ruby/regexp /(tmp|swp)$|CVS|TAGS|\.(svn|git|hg|DS_Store|idea)|Gemfile.lock|type-lists\//
