--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,17 @@ rvm:
   - 2.0.0
   - 1.9.3
   - 1.9.2
-  - ruby-head
   - 1.8.7
   - jruby-19mode
-  - jruby-head
   - jruby-18mode
   - rbx-19mode
   - rbx-18mode
   - ree
+  - ruby-head
+  - jruby-head
+matrix:
+  allow_failures:
+    - rvm:
+      - ruby-head
+      - jruby-head
 script: rake travis
