--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,12 @@ language: ruby
 notifications:
   email: true
 rvm:
+  - 2.1.0
   - 2.0.0
   - 1.9.3
   - 1.9.2
   - jruby-19mode
-  - rbx-19mode
+  - rbx
 # - ruby-head
 # - jruby-head
 matrix:
