Using Array() instead of [ foo ].
- Bumping to version 2.1 for upcoming release.
- Adapted tests to be more accurate for the described functionality.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 *.swp
 *~
 .rake_tasks~
-html
+.vagrant
+Gemfile.lock
+Vagrantfile
+coverage
 doc
+html
 pkg
 publish
-coverage
-Gemfile.lock
 test/cache.tst
