--- a/type-lists/message.yaml
+++ b/type-lists/message.yaml
@@ -5,6 +5,9 @@
   references:
   - IANA
   - RFC3862
+  xrefs: !ruby/hash:MIME::Types::Container
+    rfc:
+    - rfc3862
   registered: true
 - !ruby/object:MIME::Type
   content-type: message/delivery-status
@@ -12,6 +15,9 @@
   references:
   - IANA
   - RFC1894
+  xrefs: !ruby/hash:MIME::Types::Container
+    rfc:
+    - rfc1894
   registered: true
 - !ruby/object:MIME::Type
   content-type: message/disposition-notification
@@ -19,6 +25,9 @@
   references:
   - IANA
   - RFC3798
+  xrefs: !ruby/hash:MIME::Types::Container
+    rfc:
+    - rfc3798
   registered: true
 - !ruby/object:MIME::Type
   content-type: message/example
@@ -26,6 +35,9 @@
   references:
   - IANA
   - RFC4735
+  xrefs: !ruby/hash:MIME::Types::Container
+    rfc:
+    - rfc4735
   registered: true
 - !ruby/object:MIME::Type
   content-type: message/external-body
@@ -34,6 +46,10 @@
   - IANA
   - RFC2045
   - RFC2046
+  xrefs: !ruby/hash:MIME::Types::Container
+    rfc:
+    - rfc2045
+    - rfc2046
   registered: true
 - !ruby/object:MIME::Type
   content-type: message/feedback-report
@@ -41,6 +57,9 @@
   references:
   - IANA
   - RFC5965
+  xrefs: !ruby/hash:MIME::Types::Container
+    rfc:
+    - rfc5965
   registered: true
 - !ruby/object:MIME::Type
   content-type: message/global
@@ -48,6 +67,9 @@
   references:
   - IANA
   - RFC6532
+  xrefs: !ruby/hash:MIME::Types::Container
+    rfc:
+    - rfc6532
   registered: true
 - !ruby/object:MIME::Type
   content-type: message/global-delivery-status
@@ -55,6 +77,9 @@
   references:
   - IANA
   - RFC6533
+  xrefs: !ruby/hash:MIME::Types::Container
+    rfc:
+    - rfc6533
   registered: true
 - !ruby/object:MIME::Type
   content-type: message/global-disposition-notification
@@ -62,6 +87,9 @@
   references:
   - IANA
   - RFC6533
+  xrefs: !ruby/hash:MIME::Types::Container
+    rfc:
+    - rfc6533
   registered: true
 - !ruby/object:MIME::Type
   content-type: message/global-headers
@@ -69,6 +97,9 @@
   references:
   - IANA
   - RFC6533
+  xrefs: !ruby/hash:MIME::Types::Container
+    rfc:
+    - rfc6533
   registered: true
 - !ruby/object:MIME::Type
   content-type: message/http
@@ -76,6 +107,9 @@
   references:
   - IANA
   - RFC2616
+  xrefs: !ruby/hash:MIME::Types::Container
+    rfc:
+    - rfc2616
   registered: true
 - !ruby/object:MIME::Type
   content-type: message/imdn+xml
@@ -83,6 +117,9 @@
   references:
   - IANA
   - RFC5438
+  xrefs: !ruby/hash:MIME::Types::Container
+    rfc:
+    - rfc5438
   registered: true
 - !ruby/object:MIME::Type
   content-type: message/news
@@ -92,6 +129,14 @@
   - IANA
   - RFC5537
   - ! '[H.Spencer]'
+  - ! '{message/news=http://www.iana.org/assignments/media-types/message/news}'
+  xrefs: !ruby/hash:MIME::Types::Container
+    rfc:
+    - rfc5537
+    person:
+    - H.Spencer
+    template:
+    - message/news
   registered: true
 - !ruby/object:MIME::Type
   content-type: message/partial
@@ -100,6 +145,10 @@
   - IANA
   - RFC2045
   - RFC2046
+  xrefs: !ruby/hash:MIME::Types::Container
+    rfc:
+    - rfc2045
+    - rfc2046
   registered: true
 - !ruby/object:MIME::Type
   content-type: message/rfc822
@@ -110,6 +159,10 @@
   - IANA
   - RFC2045
   - RFC2046
+  xrefs: !ruby/hash:MIME::Types::Container
+    rfc:
+    - rfc2045
+    - rfc2046
   registered: true
 - !ruby/object:MIME::Type
   content-type: message/s-http
@@ -117,6 +170,9 @@
   references:
   - IANA
   - RFC2660
+  xrefs: !ruby/hash:MIME::Types::Container
+    rfc:
+    - rfc2660
   registered: true
 - !ruby/object:MIME::Type
   content-type: message/sip
@@ -124,6 +180,9 @@
   references:
   - IANA
   - RFC3261
+  xrefs: !ruby/hash:MIME::Types::Container
+    rfc:
+    - rfc3261
   registered: true
 - !ruby/object:MIME::Type
   content-type: message/sipfrag
@@ -131,6 +190,9 @@
   references:
   - IANA
   - RFC3420
+  xrefs: !ruby/hash:MIME::Types::Container
+    rfc:
+    - rfc3420
   registered: true
 - !ruby/object:MIME::Type
   content-type: message/tracking-status
@@ -138,6 +200,9 @@
   references:
   - IANA
   - RFC3886
+  xrefs: !ruby/hash:MIME::Types::Container
+    rfc:
+    - rfc3886
   registered: true
 - !ruby/object:MIME::Type
   content-type: message/vnd.si.simp
@@ -145,7 +210,13 @@
   obsolete: true
   references:
   - IANA
-  - ! '[Parks Young=ParksYoung]'
+  - ! '[Nicholas_Parks_Young]'
+  - ! '{message/vnd.si.simp=http://www.iana.org/assignments/media-types/message/vnd.si.simp}'
+  xrefs: !ruby/hash:MIME::Types::Container
+    person:
+    - Nicholas_Parks_Young
+    template:
+    - message/vnd.si.simp
   registered: true
 - !ruby/object:MIME::Type
   content-type: message/vnd.wfa.wsc
@@ -153,4 +224,10 @@
   references:
   - IANA
   - ! '[Conley]'
+  - ! '{message/vnd.wfa.wsc=http://www.iana.org/assignments/media-types/message/vnd.wfa.wsc}'
+  xrefs: !ruby/hash:MIME::Types::Container
+    person:
+    - Conley
+    template:
+    - message/vnd.wfa.wsc
   registered: true
